--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "gulp-cmd-concat",
+  "version": "0.1.0",
+  "description": "ported from grunt-cmd-concat",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "dependencies": {
     "cmd-util": "~0.3.12",
     "underscore": "~1.6.0",
@@ -12,5 +19,17 @@
     "gulp": "~3.6.0",
     "gulp-clean": "~0.2.4",
     "gulp-jshint": "~1.5.3"
-  }
+  },
+  "scripts": {
+    "test": "gulp test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@git.ishopex.cn:f2e/gulp-cmd-concat.git"
+  },
+  "keywords": [
+    "gulpplugin"
+  ],
+  "author": "Bentz <lv.bentz@gmail.com> (https://github.com/bentz)",
+  "license": "MIT"
 }
